--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
     *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
     
     :root {
-      --flame: #d4622c;
-      --flame-deep: #b8491e;
-      --flame-light: #f0985a;
-      --charcoal: #2c1810;
-      --warm-gray: #78716c;
-      --soft-gray: #94908a;
-      --cream: #faf8f5;
-      --warm-white: #fdf6f0;
+      --flame: #FF6B35;
+      --flame-deep: #E85A2A;
+      --flame-light: #FF8C61;
+      --charcoal: #1A1A2E;
+      --warm-gray: #2D2D3F;
+      --soft-gray: #6B6B7B;
+      --cream: #FFF8F0;
+      --warm-white: #FFF5EB;
       --purple: #7c3aed;
       --blue: #2563eb;
+      --magenta: #D62259;
+      --yellow: #FFD23F;
+      --teal: #2EC4B6;
     }
 
     html { scroll-behavior: smooth; }
@@ -73,21 +76,17 @@
 
     .hero-logo {
       width: 72px; height: 72px;
-      background: var(--flame);
+      background: #1A1A2E;
       border-radius: 20px;
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 42px;
-      font-weight: 700;
-      color: white;
       margin-bottom: 28px;
-      box-shadow: 0 0 30px rgba(212,98,44,0.4), 0 0 80px rgba(212,98,44,0.15);
+      box-shadow: 0 0 30px rgba(255,107,53,0.4), 0 0 80px rgba(255,107,53,0.15);
     }
 
     .hero h1 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: clamp(36px, 7vw, 56px);
       font-weight: 800;
       color: var(--charcoal);
@@ -99,7 +98,7 @@
     .hero-tagline {
       font-size: clamp(16px, 3vw, 20px);
       font-weight: 500;
-      color: rgba(44,24,16,0.75);
+      color: rgba(26,26,46,0.75);
       line-height: 1.5;
       margin-bottom: 36px;
       max-width: 480px;
@@ -122,15 +121,15 @@
       cursor: pointer;
       text-decoration: none;
       transition: transform 0.15s ease, box-shadow 0.2s ease;
-      box-shadow: 0 4px 20px rgba(44,24,16,0.25);
+      box-shadow: 0 4px 20px rgba(26,26,46,0.25);
     }
-    .hero-cta:hover { transform: translateY(-2px); box-shadow: 0 8px 30px rgba(44,24,16,0.3); }
+    .hero-cta:hover { transform: translateY(-2px); box-shadow: 0 8px 30px rgba(26,26,46,0.3); }
     .hero-cta:active { transform: scale(0.97); }
 
     .hero-sub {
       margin-top: 16px;
       font-size: 14px;
-      color: rgba(44,24,16,0.5);
+      color: rgba(26,26,46,0.5);
     }
 
     /* ---- SECTION BASE ---- */
@@ -147,7 +146,7 @@
     }
 
     .section-title {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: clamp(28px, 5vw, 40px);
       font-weight: 700;
       line-height: 1.2;
@@ -216,10 +215,10 @@
       background: white;
       border-radius: 24px;
       padding: 32px 28px;
-      box-shadow: 0 2px 16px rgba(44,24,16,0.05);
+      box-shadow: 0 2px 16px rgba(26,26,46,0.05);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-    .feature-card:hover { transform: translateY(-4px); box-shadow: 0 8px 30px rgba(44,24,16,0.08); }
+    .feature-card:hover { transform: translateY(-4px); box-shadow: 0 8px 30px rgba(26,26,46,0.08); }
 
     .feature-icon {
       width: 56px; height: 56px;
@@ -232,7 +231,7 @@
     }
 
     .feature-card h3 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: 22px;
       font-weight: 700;
       margin-bottom: 10px;
@@ -245,7 +244,7 @@
       line-height: 1.6;
     }
 
-    .feature-card.card-ideas .feature-icon { background: linear-gradient(135deg, #f5f0eb, #ede5dc); }
+    .feature-card.card-ideas .feature-icon { background: linear-gradient(135deg, #FFF0E6, #ede5dc); }
     .feature-card.card-magic .feature-icon { background: linear-gradient(135deg, rgba(124,58,237,0.12), rgba(124,58,237,0.06)); }
     .feature-card.card-words .feature-icon { background: linear-gradient(135deg, rgba(37,99,235,0.12), rgba(37,99,235,0.06)); }
 
@@ -264,7 +263,7 @@
       display: flex;
       gap: 20px;
       padding: 28px 0;
-      border-bottom: 1px solid #ede9e1;
+      border-bottom: 1px solid #F0E8DC;
     }
     .step:last-child { border-bottom: none; }
 
@@ -309,7 +308,7 @@
       background: white;
       border-radius: 20px;
       padding: 28px;
-      box-shadow: 0 2px 12px rgba(44,24,16,0.04);
+      box-shadow: 0 2px 12px rgba(26,26,46,0.04);
     }
 
     .quote-card .stars {
@@ -343,7 +342,7 @@
 
     .capture .section-title { color: var(--charcoal); }
     .capture .section-desc {
-      color: rgba(44,24,16,0.7);
+      color: rgba(26,26,46,0.7);
       margin: 0 auto 32px;
     }
 
@@ -360,7 +359,7 @@
     }
 
     .capture-box h3 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: 24px;
       font-weight: 700;
       margin-bottom: 8px;
@@ -383,7 +382,7 @@
       width: 100%;
       padding: 16px 18px;
       border-radius: 14px;
-      border: 2px solid #e5e1d8;
+      border: 2px solid #EBE0D2;
       font-size: 16px;
       font-family: inherit;
       outline: none;
@@ -405,14 +404,14 @@
       font-family: inherit;
       cursor: pointer;
       transition: transform 0.15s ease;
-      box-shadow: 0 4px 16px rgba(44,24,16,0.2);
+      box-shadow: 0 4px 16px rgba(26,26,46,0.2);
     }
     .capture-form button:hover { transform: translateY(-1px); }
     .capture-form button:active { transform: scale(0.97); }
 
     .capture-fine {
       font-size: 12px;
-      color: rgba(44,24,16,0.4);
+      color: rgba(26,26,46,0.4);
       margin-top: 12px;
     }
 
@@ -423,7 +422,7 @@
     }
 
     .capture-success h4 {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: 22px;
       font-weight: 700;
       margin-bottom: 8px;
@@ -443,7 +442,7 @@
     }
 
     .footer-logo {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: 22px;
       font-weight: 700;
       color: white;
@@ -494,7 +493,7 @@
       background: rgba(250,248,245,0.92);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
-      box-shadow: 0 1px 8px rgba(44,24,16,0.06);
+      box-shadow: 0 1px 8px rgba(26,26,46,0.06);
     }
 
     .nav-brand {
@@ -506,19 +505,15 @@
 
     .nav-logo {
       width: 36px; height: 36px;
-      background: var(--flame);
+      background: #1A1A2E;
       border-radius: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Playfair Display', serif;
-      font-size: 18px;
-      font-weight: 700;
-      color: white;
     }
 
     .nav-name {
-      font-family: 'Playfair Display', serif;
+      font-family: 'Outfit', sans-serif;
       font-size: 18px;
       font-weight: 700;
       color: var(--charcoal);
@@ -575,7 +570,9 @@
   <!-- NAV -->
   <nav class="nav" id="nav">
     <a href="#" class="nav-brand">
-      <div class="nav-logo">P</div>
+      <div class="nav-logo">
+        <svg width="20" height="24" viewBox="0 0 80 100" fill="none"><defs><linearGradient id="navFl" x1="20" y1="90" x2="55" y2="8" gradientUnits="userSpaceOnUse"><stop offset="0%" stop-color="#FF6B35"/><stop offset="70%" stop-color="#E83D5E"/><stop offset="100%" stop-color="#D62259"/></linearGradient></defs><path d="M40 4C40 4 16 32 16 52C16 66 24 78 36 83C31 74 29 64 36 52C43 40 47 32 40 16C50 30 64 42 64 58C64 72 54 83 40 88C58 83 68 70 68 52C68 30 40 4 40 4Z" fill="url(#navFl)"/><ellipse cx="40" cy="62" rx="7" ry="6.5" fill="#FFD23F" opacity="0.9"/></svg>
+      </div>
       <span class="nav-name">ParentFlare</span>
     </a>
     <a href="https://parentflare.vercel.app" class="nav-cta">Open the App</a>
@@ -591,7 +588,9 @@
       <div class="flare f5"></div>
     </div>
     <div class="hero-content">
-      <div class="hero-logo">P</div>
+      <div class="hero-logo">
+        <svg width="42" height="52" viewBox="0 0 80 100" fill="none"><defs><linearGradient id="heroFl" x1="20" y1="90" x2="55" y2="8" gradientUnits="userSpaceOnUse"><stop offset="0%" stop-color="#FF6B35"/><stop offset="70%" stop-color="#E83D5E"/><stop offset="100%" stop-color="#D62259"/></linearGradient></defs><path d="M40 4C40 4 16 32 16 52C16 66 24 78 36 83C31 74 29 64 36 52C43 40 47 32 40 16C50 30 64 42 64 58C64 72 54 83 40 88C58 83 68 70 68 52C68 30 40 4 40 4Z" fill="url(#heroFl)"/><ellipse cx="40" cy="62" rx="7" ry="6.5" fill="#FFD23F" opacity="0.9"/></svg>
+      </div>
       <h1>Make parenting doable.</h1>
       <p class="hero-tagline">You don't need another parenting book. You need the right idea at the right moment. ParentFlare gives you activities, scripts, and coaching — powered by AI, grounded in child development.</p>
       <a href="https://parentflare.vercel.app" class="hero-cta">
