--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
 
     /* ---- ANIMATIONS ---- */
     @keyframes fadeUp { from { opacity: 0; transform: translateY(24px); } to { opacity: 1; transform: translateY(0); } }
-    .fade-up { opacity: 0; transform: translateY(24px); transition: opacity 0.6s ease, transform 0.6s ease; }
+    .fade-up { opacity: 1; transform: translateY(0); transition: opacity 0.6s ease, transform 0.6s ease; }
+    .fade-up.waiting { opacity: 0; transform: translateY(24px); }
     .fade-up.visible { opacity: 1; transform: translateY(0); }
 
     /* ---- RESPONSIVE ---- */
@@ -476,6 +477,6 @@
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => { if (entry.isIntersecting) { entry.target.classList.add('visible'); } });
     }, { threshold: 0.15, rootMargin: '0px 0px -40px 0px' });
-    document.querySelectorAll('.fade-up').forEach(el => observer.observe(el));
+    document.querySelectorAll('.fade-up').forEach(el => { el.classList.add('waiting'); observer.observe(el); });
 
     async function handleCapture() {
