Link Start Free Trial to Stripe payment link

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <li>Adjust activities and scripts in real time</li>
             <li>Plan my time &mdash; AI-powered plans for trips, weekends, and open afternoons</li>
           </ul>
-          <a href="https://parentflare.vercel.app" class="pricing-cta cta-premium">Start Free Trial</a>
+          <a href="https://buy.stripe.com/fZubJ29F81YJcHyesp9MY00" class="pricing-cta cta-premium">Start Free Trial</a>
         </div>
       </div>
       <p class="pricing-note fade-up">Premium includes a 7-day free trial. After that, it's $10.00 USD/month via Stripe. Cancel anytime from your account &mdash; no fees, no questions asked.</p>
