Remove AI language from marketing copy, keep in legal docs

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ParentFlare — AI-powered activities and parenting scripts for the moments you need them most. Screen-free ideas, custom activities, and the exact words to say.">
+  <meta name="description" content="ParentFlare — Instant activities and parenting tools for the moments you need them most. Screen-free ideas, custom activities, and the exact words to say.">
   <meta property="og:title" content="ParentFlare — Make parenting doable.">
-  <meta property="og:description" content="AI-powered activities and parenting scripts for the moments you need them most.">
+  <meta property="og:description" content="Instant activities and parenting tools for the moments you need them most.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://parentflare.com">
   <title>ParentFlare — Make parenting doable.</title>
@@ -250,7 +250,7 @@
         <svg width="42" height="52" viewBox="0 0 80 100" fill="none"><defs><linearGradient id="heroFl" x1="20" y1="90" x2="55" y2="8" gradientUnits="userSpaceOnUse"><stop offset="0%" stop-color="#FF6B35"/><stop offset="70%" stop-color="#E83D5E"/><stop offset="100%" stop-color="#D62259"/></linearGradient></defs><path d="M40 4C40 4 16 32 16 52C16 66 24 78 36 83C31 74 29 64 36 52C43 40 47 32 40 16C50 30 64 42 64 58C64 72 54 83 40 88C58 83 68 70 68 52C68 30 40 4 40 4Z" fill="url(#heroFl)"/><ellipse cx="40" cy="62" rx="7" ry="6.5" fill="#FFD23F" opacity="0.9"/></svg>
       </div>
       <h1>Make parenting doable.</h1>
-      <p class="hero-tagline">Instant screen-free activities and AI-powered plans for the moments you didn't plan for. Saturday mornings, rainy afternoons, trips with kids &mdash; we've got you.</p>
+      <p class="hero-tagline">Instant screen-free activities and custom plans for the moments you didn't plan for. Saturday mornings, rainy afternoons, trips with kids &mdash; we've got you.</p>
       <a href="https://parentflare.vercel.app" class="hero-cta">Try ParentFlare Free &rarr;</a>
       <p class="hero-sub">No account needed. Works on any device.</p>
     </div>
@@ -280,8 +280,8 @@
       <div class="feature-grid">
         <div class="feature-card card-ideas fade-up">
           <div class="feature-icon">&#127919;</div>
-          <h3>85+ activities &mdash; or let AI make you one</h3>
-          <p>Choose a curated activity filtered by age, time, and prep level &mdash; or describe your moment and our AI builds a custom one on the spot. Every activity comes with steps, a script for what to say, and a "why it works" explanation.</p>
+          <h3>85+ activities &mdash; or we'll make you one</h3>
+          <p>Choose a curated activity filtered by age, time, and prep level &mdash; or describe your moment and we'll build a custom one on the spot. Every activity comes with steps, a script for what to say, and a "why it works" explanation.</p>
         </div>
         <div class="feature-card card-plan fade-up" style="border:2px solid #a7f3d0;background:linear-gradient(135deg, #f0fdf4, white);">
           <div class="feature-icon">&#129517;</div>
@@ -304,7 +304,7 @@
       <h2 class="section-title fade-up">From chaos to calm in 30 seconds.</h2>
       <div class="steps">
         <div class="step fade-up"><div class="step-number">1</div><div><h3>Pick your child's age</h3><p>Toddler, Little Kid, or Big Kid. Everything adapts to their developmental stage.</p></div></div>
-        <div class="step fade-up"><div class="step-number">2</div><div><h3>Choose what you need</h3><p>Browse curated activities, let AI build one for your moment, plan your afternoon, or get a coaching script for a hard moment.</p></div></div>
+        <div class="step fade-up"><div class="step-number">2</div><div><h3>Choose what you need</h3><p>Browse curated activities, get one built for your moment, plan your afternoon, or get a coaching script for a hard moment.</p></div></div>
         <div class="step fade-up"><div class="step-number">3</div><div><h3>Use it right now</h3><p>Every activity includes steps, a "what to say" script, and a "why this works" explanation. No prep, no guessing.</p></div></div>
       </div>
     </div>
@@ -315,7 +315,7 @@
     <div class="section-inner">
       <div class="section-label fade-up">Simple pricing</div>
       <h2 class="section-title fade-up">Start free. Upgrade when you're ready.</h2>
-      <p class="section-desc fade-up">Every parent gets the full activity library and AI-powered tools for free. Premium unlocks follow-up conversations and our AI trip and day planner.</p>
+      <p class="section-desc fade-up">Every parent gets the full activity library and personalized tools for free. Premium unlocks follow-up conversations and our trip and day planner.</p>
       <div class="pricing-grid">
         <div class="pricing-card fade-up">
           <h3>Free</h3>
@@ -324,8 +324,8 @@
           <ul class="pricing-features">
             <li>85+ curated screen-free activities</li>
             <li>Filter by age, time, prep, and involvement</li>
-            <li>AI-generated custom activities (single result)</li>
-            <li>AI-generated coaching scripts (single result)</li>
+            <li>Custom activities (single result)</li>
+            <li>Coaching scripts (single result)</li>
           </ul>
           <a href="https://parentflare.vercel.app" class="pricing-cta cta-free">Try It Free</a>
         </div>
@@ -336,9 +336,9 @@
           <div class="pricing-subtitle">7-day free trial, cancel anytime</div>
           <ul class="pricing-features">
             <li>Everything in Free</li>
-            <li>Follow-up AI conversations (up to 5 turns)</li>
+            <li>Follow-up conversations (up to 5 turns)</li>
             <li>Adjust activities and scripts in real time</li>
-            <li>Plan my time &mdash; AI-powered plans for trips, weekends, and open afternoons</li>
+            <li>Plan my time &mdash; custom plans for trips, weekends, and open afternoons</li>
           </ul>
           <a href="https://buy.stripe.com/fZubJ29F81YJcHyesp9MY00" class="pricing-cta cta-premium">Start Free Trial</a>
         </div>
@@ -353,11 +353,11 @@
       <div class="section-label fade-up">Questions</div>
       <h2 class="section-title fade-up">Frequently asked questions</h2>
       <div class="faq-list">
-        <div class="faq-item fade-up"><h3>What age range is this for?</h3><p>ParentFlare covers ages 2&ndash;11, split into three groups: Toddlers (2&ndash;4), Little Kids (5&ndash;7), and Big Kids (8&ndash;11). Activities and AI responses are tailored to your child's age group.</p></div>
+        <div class="faq-item fade-up"><h3>What age range is this for?</h3><p>ParentFlare covers ages 2&ndash;11, split into three groups: Toddlers (2&ndash;4), Little Kids (5&ndash;7), and Big Kids (8&ndash;11). Activities and personalized results are tailored to your child's age group.</p></div>
         <div class="faq-item fade-up"><h3>Do I need an account to use it?</h3><p>No. The free version works instantly &mdash; no sign-up, no account, no email required. Premium features require an email for billing through Stripe.</p></div>
-        <div class="faq-item fade-up"><h3>What's the difference between free and Premium?</h3><p>Free gives you the full activity library plus single AI-generated activities and coaching scripts. Premium adds follow-up conversations so you can adjust results in real time, plus "Plan my time" &mdash; our AI trip and day planner that creates custom activity plans based on your location, time, and energy level.</p></div>
+        <div class="faq-item fade-up"><h3>What's the difference between free and Premium?</h3><p>Free gives you the full activity library plus custom activities and coaching scripts (single results). Premium adds follow-up conversations so you can adjust results in real time, plus "Plan my time" &mdash; a personalized trip and day planner that creates custom activity plans based on your location, time, and energy level.</p></div>
         <div class="faq-item fade-up"><h3>How is this different from other parenting apps?</h3><p>Most activity apps are designed for calm, planned moments &mdash; browsing Pinterest-style lists when you have time to prepare. ParentFlare is built for right now. You open it when you have unplanned time and need something immediately. No browsing, no saving for later, no prep lists. Just what to do and what to say, in seconds.</p></div>
-        <div class="faq-item fade-up"><h3>Is my data safe?</h3><p>We don't sell your data. Email addresses are used only for Stripe billing. AI-generated content is not stored or used for training. See our full <a href="#privacy" style="color:var(--flame);text-decoration:none;">Privacy Policy</a> below.</p></div>
+        <div class="faq-item fade-up"><h3>Is my data safe?</h3><p>We don't sell your data. Email addresses are used only for Stripe billing. Your conversations and generated content are not stored or used for training. See our full <a href="#privacy" style="color:var(--flame);text-decoration:none;">Privacy Policy</a> below.</p></div>
       </div>
     </div>
   </section>
