Display email fix

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 
       <h3>Billing and Cancellation</h3>
       <p>Premium subscriptions begin with a 7-day free trial. After the trial, you are billed monthly on the date your trial ends. You may cancel your subscription at any time through your Stripe Customer Portal (accessible via the "Premium" badge in the app). If you cancel during the trial, you will not be charged. When you cancel after the trial, your Premium access continues until the end of your current billing period. There are no cancellation fees, no long-term commitments, and no questions asked.</p>
-      <p>Because ParentFlare Premium provides immediate access to AI-generated content upon subscription, refunds are generally not provided for partial billing periods. If you experience a technical issue that prevents you from using Premium features, please contact us at <a href="/cdn-cgi/l/email-protection#7d15181111123d0d1c0f1813091b111c0f18531e1210"><span class="__cf_email__" data-cfemail="f59d9099999ab5859487909b819399948790db969a98">[email&#160;protected]</span></a> and we will make it right.</p>
+      <p>Because ParentFlare Premium provides immediate access to AI-generated content upon subscription, refunds are generally not provided for partial billing periods. If you experience a technical issue that prevents you from using Premium features, please contact us at <a href="mailto:hello@parentflare.com">hello@parentflare.com</a> and we will make it right.</p>
 
       <h3>AI-Generated Content</h3>
       <p>The "Make me one," "Plan my time," and "Find the words" features use AI (powered by Anthropic's Claude) to generate custom activities, plans, and parenting scripts. AI-generated content is provided as suggestions only. You know your child best &mdash; always use your own judgment before applying any suggestion. ParentFlare is not responsible for outcomes resulting from the use of AI-generated content.</p>
@@ -422,7 +422,7 @@
       <p>We may update these terms from time to time. If we make significant changes, we will update the "Last updated" date above. Your continued use of ParentFlare after changes constitutes acceptance of the updated terms.</p>
 
       <h3>Contact</h3>
-      <p>Questions about these terms? Email us at <a href="/cdn-cgi/l/email-protection#d4bcb1b8b8bb94a4b5a6b1baa0b2b8b5a6b1fab7bbb9"><span class="__cf_email__" data-cfemail="8be3eee7e7e4cbfbeaf9eee5ffede7eaf9eea5e8e4e6">[email&#160;protected]</span></a>.</p>
+      <p>Questions about these terms? Email us at <a href="mailto:hello@parentflare.com">hello@parentflare.com</a>.</p>
 
       <hr class="legal-divider">
 
