Remove AI language from marketing copy, fix all obfuscated email links, remove Cloudflare scripts

--- a/index.html
+++ b/index.html
@@ -445,13 +445,13 @@
       <p>ParentFlare uses the following third-party services: <strong>Stripe</strong> for payment processing, <strong>Supabase</strong> for database hosting, <strong>Vercel</strong> for app hosting and analytics, <strong>PostHog</strong> for anonymous product analytics, <strong>Anthropic</strong> for AI-generated content (your prompts are sent to Anthropic's API to generate responses), and <strong>Google Fonts</strong> for typography. Each service's own privacy policy governs how they handle data.</p>
 
       <h3>Data Retention</h3>
-      <p>If you cancel your Premium subscription, your email and subscription record remain in our database in case you resubscribe. If you would like your data deleted entirely, email <a href="/cdn-cgi/l/email-protection#69010c0505062919081b0c071d0f05081b0c470a0604"><span class="__cf_email__" data-cfemail="2e464b4242416e5e4f5c4b405a48424f5c4b004d4143">[email&#160;protected]</span></a> and we will remove it within 30 days.</p>
+      <p>If you cancel your Premium subscription, your email and subscription record remain in our database in case you resubscribe. If you would like your data deleted entirely, email <a href="mailto:hello@parentflare.com">hello@parentflare.com</a> and we will remove it within 30 days.</p>
 
       <h3>Children's Privacy</h3>
       <p>ParentFlare is designed for parents and caregivers, not for use by children. We do not knowingly collect personal information from children under 13. If you believe a child has provided us with personal information, please contact us and we will delete it promptly.</p>
 
       <h3>Contact</h3>
-      <p>Privacy questions? Email us at <a href="/cdn-cgi/l/email-protection#f49c9198989bb4849586919a809298958691da979b99"><span class="__cf_email__" data-cfemail="eb838e878784ab9b8a998e859f8d878a998ec5888486">[email&#160;protected]</span></a>.</p>
+      <p>Privacy questions? Email us at <a href="mailto:hello@parentflare.com">hello@parentflare.com</a>.</p>
     </div>
   </section>
 
@@ -466,17 +466,10 @@
       <a href="#terms">Terms</a>
       <a href="#privacy">Privacy</a>
     </div>
-    <p class="footer-contact">Questions? <a href="/cdn-cgi/l/email-protection#5d35383131321d2d3c2f3833293b313c2f38733e3230"><span class="__cf_email__" data-cfemail="95fdf0f9f9fad5e5f4e7f0fbe1f3f9f4e7f0bbf6faf8">[email&#160;protected]</span></a></p>
+    <p class="footer-contact">Questions? <a href="mailto:hello@parentflare.com">hello@parentflare.com</a></p>
     <p class="copyright">&copy; 2026 ParentFlare. Built by parents, for parents.</p>
   </footer>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  <script>
     const nav = document.getElementById('nav');
-    window.addEventListener('scroll', () => { nav.classList.toggle('scrolled', window.scrollY > 60); });
-
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => { if (entry.isIntersecting) { entry.target.classList.add('visible'); } });
-    }, { threshold: 0.15, rootMargin: '0px 0px -40px 0px' });
-    document.querySelectorAll('.fade-up').forEach(el => { el.classList.add('waiting'); observer.observe(el); });
-
-    async function handleCapture() {
+    window.addEventListener('scroll', () => { nav.classList.toggle('scrolled', window.scrollY > 60);
