--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <div class="phone-frame">
               <div class="phone-notch"></div>
               <video autoplay muted loop playsinline preload="metadata">
-                <source src="/videos/plan-demo.mp4" type="video/mp4">
+                <source src="/public/videos/plan-demo.mp4" type="video/mp4">
               </video>
             </div>
           </div>
