--- a/index.html
+++ b/index.html
@@ -120,15 +120,15 @@
     .feature-card.card-plan .feature-icon { background: linear-gradient(135deg, rgba(16,185,129,0.15), rgba(16,185,129,0.08)); }
     .feature-card.card-words .feature-icon { background: linear-gradient(135deg, rgba(37,99,235,0.12), rgba(37,99,235,0.06)); }
 
-    /* ---- PLAN DEMO VIDEO ---- */
-    .plan-demo { margin-top: 24px; display: flex; justify-content: center; }
+    /* ---- DEMO VIDEOS (shared phone frame style) ---- */
+    .demo-video { margin-top: 24px; display: flex; justify-content: center; }
     .phone-frame {
       position: relative;
       width: 260px;
       background: #1A1A2E;
       border-radius: 32px;
       padding: 12px;
-      box-shadow: 0 8px 40px rgba(26,26,46,0.2), 0 2px 12px rgba(16,185,129,0.1);
+      box-shadow: 0 8px 40px rgba(26,26,46,0.2), 0 2px 12px rgba(0,0,0,0.1);
     }
     .phone-frame video {
       width: 100%;
@@ -147,9 +147,15 @@
       z-index: 2;
     }
 
+    .card-plan .phone-frame { box-shadow: 0 8px 40px rgba(26,26,46,0.2), 0 2px 12px rgba(16,185,129,0.1); }
+    .card-ideas .phone-frame { box-shadow: 0 8px 40px rgba(26,26,46,0.2), 0 2px 12px rgba(255,107,53,0.1); }
+
     @media (min-width: 640px) {
       .phone-frame { width: 280px; }
     }
+
+    /* legacy class alias */
+    .plan-demo { margin-top: 24px; display: flex; justify-content: center; }
 
     /* ---- HOW IT WORKS ---- */
     .how-it-works { background: var(--cream); }
@@ -294,12 +300,20 @@
           <div class="feature-icon">&#127919;</div>
           <h3>85+ activities &mdash; or we'll make you one</h3>
           <p>Choose a curated activity filtered by age, time, and prep level &mdash; or describe your moment and we'll build a custom one on the spot. Every activity comes with steps, a script for what to say, and a "why it works" explanation.</p>
+          <div class="demo-video fade-up">
+            <div class="phone-frame">
+              <div class="phone-notch"></div>
+              <video autoplay muted loop playsinline preload="metadata">
+                <source src="/videos/ideas-demo.mp4" type="video/mp4">
+              </video>
+            </div>
+          </div>
         </div>
         <div class="feature-card card-plan fade-up" style="border:2px solid #a7f3d0;background:linear-gradient(135deg, #f0fdf4, white);">
           <div class="feature-icon">&#129517;</div>
           <h3>Plan my time</h3>
           <p>Going somewhere? Got an open afternoon? Tell us where you are, how much time you have, and the vibe you're going for. We'll build a custom plan of 3&ndash;4 activities with timing, transitions, and what to bring. Like having a parent friend who always knows what to do.</p>
-          <div class="plan-demo fade-up">
+          <div class="demo-video fade-up">
             <div class="phone-frame">
               <div class="phone-notch"></div>
               <video autoplay muted loop playsinline preload="metadata">
